--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.13)
 
-project(gtest-demo LANGUAGES CXX)
+project(cryptopals LANGUAGES CXX)
 
 # set the C++ standard
 set(CMAKE_CXX_STANDARD 11)
