--- a/.github/workflows/cmake-clang.yml
+++ b/.github/workflows/cmake-clang.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
 jobs:
   call-cmake-workflow:
-    uses: ./.github/.cmake-multi-platform.yml
+    uses: ./.github/workflows/cmake-multi-platform.yml
   with:
     os: ubuntu-latest
     build_type: Release
