--- a/.github/workflows/cmake-gcc.yml
+++ b/.github/workflows/cmake-gcc.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   call-cmake-workflow:
-    uses: ./.github/.cmake-multi-platform.yml
+    uses: ./.github/workflows/cmake-multi-platform.yml
   with:
     os: ubuntu-latest
     build_type: Release
