--- a/src/set-1/CMakeLists.txt
+++ b/src/set-1/CMakeLists.txt
@@ -1,5 +1,6 @@
-add_subdirectory(ch-1)
-add_subdirectory(ch-2)
-add_subdirectory(ch-3)
-add_subdirectory(ch-4)
-add_subdirectory(ch-5)
+file(GLOB V_GLOB LIST_DIRECTORIES true "ch-*")
+foreach(item ${V_GLOB})
+	if(IS_DIRECTORY ${item})
+		add_subdirectory(${item})
+	endif()
+endforeach()
