--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,13 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 set(BUILD_GMOCK OFF CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(gtest)
 
+file(READ resources/4.txt FILE_4_CONTENT)
+configure_file(ch_4_test.in.cpp ch_4_test.cpp @ONLY)
+
+file(READ resources/6.txt FILE_6_CONTENT)
+configure_file(ch_6_test.in.cpp ch_6_test.cpp @ONLY)
+
+
 add_executable(
     unit_tests
     common_test.cpp
@@ -16,6 +23,7 @@ add_executable(
     ch_3_test.cpp
     ch_4_test.cpp
     ch_5_test.cpp
+    ch_6_test.cpp
     )
 
 target_link_libraries(unit_tests
