--- a/src/shared/CMakeLists.txt
+++ b/src/shared/CMakeLists.txt
@@ -15,11 +15,11 @@ target_include_directories(common
 # we use this to get code coverage
 # flags are only valid with the GNU compiler and on Linux
 if(CMAKE_CXX_COMPILER_ID MATCHES GNU AND CMAKE_HOST_SYSTEM_NAME STREQUAL "Linux")
-  target_compile_options(ch_1
+  target_compile_options(common
     PUBLIC
       "--coverage"
     )
-  target_link_options(ch_1
+  target_link_options(common
     INTERFACE
       "--coverage"
     )
